# my-ds-template

./: .gitignore  cookiecutter-help.json  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  Makefile  README.md  pyproject.toml
