[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == 'MIT' %}"License :: OSI Approved :: MIT License"{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}"License :: OSI Approved :: BSD License"{% endif %}
]
dependencies = [
    "loguru",
    "matplotlib",
    "numpy",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = ">={{ cookiecutter.python_version_number }}"

[tool.ruff]
line-length = 100
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "B"]
ignore = [
    "E501",
    "D100",
    "D104",
]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.module_name }}"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ipython",
    "jupyterlab",
    "mkdocs",
    "notebook",
    "ruff>=0.14.14",
]